# pulsar

./: .gitignore  Cargo.toml  README.md
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/real/: dsv4.rs  qwen35.rs
crates/gguf/: Cargo.toml
crates/gguf/examples/: inspect.rs
crates/gguf/src/: lib.rs
crates/gguf/tests/: hy3_header.rs
crates/kernels/: Cargo.toml  build.rs
crates/kernels/cuda/: dsa_indexer.inc  dsv4_kernels.inc  gqa_kernels.inc  mla_kernels.inc  pulsar_kernels.cu  qwen35_kernels.inc
crates/kernels/src/: lib.rs
crates/kernels/tests/: selftests.rs
crates/quant/: Cargo.toml
crates/quant/src/: cpu_dot.rs  iq.rs  lib.rs
crates/quant/tests/: writer_e2e.rs
crates/serve/: Cargo.toml
crates/serve/src/: main.rs
crates/serve/webui/: index.html
crates/stream/src/: lib.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: lib.rs
crates/tokenizer/tests/: hy3_parity.rs
docs/: DESIGN-expert-store.md  deepseek4-port-notes.md  dflash-port-notes.md  qwen36-port-notes.md
docs/assets/: pulsar-poster.html
docs/examples/: bench_kv.md  bench_kv.sh  bench_kv_tf.md  bench_kv_tf.sh  runpulsar.md  runpulsar.sh
scripts/: atlas_build.py  bench.sh  check.sh  prefix-persist-test.sh  qwen35-3way.sh
