[package]
name = "serve"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "OpenAI-compatible HTTP server over the pulsar engine."

[dependencies]
engine = { path = "../engine" }
gguf = { path = "../gguf" }
tokenizer = { path = "../tokenizer" }
serde_json = "1"

[[bin]]
name = "pulsar-serve"
path = "src/main.rs"
